k8s/destination-rule-circuit-breaker-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-istio-circuit-breaker
spec:
  host: backend-istio
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 6s
      baseEjectionTime: 5m
