k8s/retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-internal-route
spec:
  hosts:
  - backend-istio
  http:
  - match:
    - name: retry-on-slow
      method:
        exact: "GET"
    retries:
      attempts: 2
      perTryTimeout: 0.2s
      retryOn: gateway-error,connect-failure,refused-stream,5xx
    route:
      - destination:
          host: backend-istio
    timeout: 3s
  - route:
    - destination:
        host: backend-istio
