k8s/timeout-backend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-internal-route
spec:
  hosts:
  - backend-istio
  http:
   - route:
      - destination:
          host: backend-istio
     timeout: 0.2s
